@@ -18,15 +18,15 @@
 package de.tudarmstadt.ukp.inception.annotation.layer.relation;
 
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 import static org.apache.uima.cas.CAS.TYPE_NAME_ANNOTATION;
 
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.function.Supplier;
 
-import org.apache.uima.resource.metadata.TypeDescription;
+import org.apache.uima.cas.CAS;
 import org.apache.uima.resource.metadata.TypeSystemDescription;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.IModel;
@@ -35,6 +35,7 @@ import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 
+import de.tudarmstadt.ukp.clarin.webanno.constraints.ConstraintsService;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.inception.annotation.layer.behaviors.LayerBehaviorRegistry;
@@ -65,6 +66,7 @@ public class RelationLayerSupport
 
     private final ApplicationEventPublisher eventPublisher;
     private final LayerBehaviorRegistry layerBehaviorsRegistry;
+    private final ConstraintsService constraintsService;
 
     private String layerSupportId;
     private List<LayerType> types;
@@ -72,11 +74,12 @@ public class RelationLayerSupport
     @Autowired
     public RelationLayerSupport(FeatureSupportRegistry aFeatureSupportRegistry,
             ApplicationEventPublisher aEventPublisher,
-            LayerBehaviorRegistry aLayerBehaviorsRegistry)
+            LayerBehaviorRegistry aLayerBehaviorsRegistry, ConstraintsService aConstraintsService)
     {
         super(aFeatureSupportRegistry);
         eventPublisher = aEventPublisher;
         layerBehaviorsRegistry = aLayerBehaviorsRegistry;
+        constraintsService = aConstraintsService;
     }
 
     @Override
@@ -113,27 +116,31 @@ public class RelationLayerSupport
     public RelationAdapter createAdapter(AnnotationLayer aLayer,
             Supplier<Collection<AnnotationFeature>> aFeatures)
     {
-        RelationAdapter adapter = new RelationAdapter(getLayerSupportRegistry(),
-                featureSupportRegistry, eventPublisher, aLayer, FEAT_REL_TARGET, FEAT_REL_SOURCE,
-                aFeatures,
-                layerBehaviorsRegistry.getLayerBehaviors(this, RelationLayerBehavior.class));
-
-        return adapter;
+        return new RelationAdapter(getLayerSupportRegistry(), featureSupportRegistry,
+                eventPublisher, aLayer, FEAT_REL_TARGET, FEAT_REL_SOURCE, aFeatures,
+                layerBehaviorsRegistry.getLayerBehaviors(this, RelationLayerBehavior.class),
+                constraintsService);
     }
 
     @Override
     public void generateTypes(TypeSystemDescription aTsd, AnnotationLayer aLayer,
             List<AnnotationFeature> aAllFeaturesInProject)
     {
-        TypeDescription td = aTsd.addType(aLayer.getName(), aLayer.getDescription(),
-                TYPE_NAME_ANNOTATION);
-        AnnotationLayer attachType = aLayer.getAttachType();
+        var td = aTsd.addType(aLayer.getName(), aLayer.getDescription(), TYPE_NAME_ANNOTATION);
+        var attachType = aLayer.getAttachType();
 
-        td.addFeature(FEAT_REL_TARGET, "", attachType.getName());
-        td.addFeature(FEAT_REL_SOURCE, "", attachType.getName());
+        if (attachType != null) {
+            td.addFeature(FEAT_REL_TARGET, "", attachType.getName());
+            td.addFeature(FEAT_REL_SOURCE, "", attachType.getName());
+        }
+        else {
+            td.addFeature(FEAT_REL_TARGET, "", CAS.TYPE_NAME_ANNOTATION);
+            td.addFeature(FEAT_REL_SOURCE, "", CAS.TYPE_NAME_ANNOTATION);
+        }
 
-        List<AnnotationFeature> featureForLayer = aAllFeaturesInProject.stream()
-                .filter(feature -> aLayer.equals(feature.getLayer())).collect(toList());
+        var featureForLayer = aAllFeaturesInProject.stream() //
+                .filter(feature -> aLayer.equals(feature.getLayer())) //
+                .toList();
         generateFeatures(aTsd, td, featureForLayer);
     }
 
@@ -149,7 +156,7 @@ public class RelationLayerSupport
     @Override
     public Panel createTraitsEditor(String aId, IModel<AnnotationLayer> aLayerModel)
     {
-        AnnotationLayer layer = aLayerModel.getObject();
+        var layer = aLayerModel.getObject();
 
         if (!accepts(layer)) {
             throw unsupportedLayerTypeException(layer);
@@ -174,5 +181,15 @@ public class RelationLayerSupport
         }
 
         return Collections.emptyList();
+    }
+
+    @Override
+    public boolean isDeletable(AnnotationFeature aFeature)
+    {
+        if (Set.of(FEAT_REL_SOURCE, FEAT_REL_TARGET).contains(aFeature.getName())) {
+            return false;
+        }
+
+        return true;
     }
 }
