@@ -26,13 +26,10 @@ import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.T
 import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.TOPIC_ELEMENT_PROJECT;
 import static de.tudarmstadt.ukp.inception.websocket.config.WebSocketConstants.TOPIC_ELEMENT_USER;
 import static java.lang.Integer.MAX_VALUE;
-import static java.util.stream.Collectors.toList;
 
 import java.io.IOException;
 import java.security.Principal;
 import java.time.Duration;
-
-import javax.persistence.NoResultException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -57,12 +54,12 @@ import com.github.benmanes.caffeine.cache.Caffeine;
 import com.github.benmanes.caffeine.cache.LoadingCache;
 
 import de.tudarmstadt.ukp.clarin.webanno.api.annotation.preferences.UserPreferencesService;
+import de.tudarmstadt.ukp.clarin.webanno.constraints.ConstraintsService;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationDocument;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
 import de.tudarmstadt.ukp.clarin.webanno.model.Mode;
 import de.tudarmstadt.ukp.clarin.webanno.model.Project;
 import de.tudarmstadt.ukp.clarin.webanno.security.UserDao;
-import de.tudarmstadt.ukp.clarin.webanno.security.model.User;
 import de.tudarmstadt.ukp.inception.annotation.storage.CasStorageSession;
 import de.tudarmstadt.ukp.inception.diam.messages.MViewportInit;
 import de.tudarmstadt.ukp.inception.diam.messages.MViewportUpdate;
@@ -78,6 +75,8 @@ import de.tudarmstadt.ukp.inception.rendering.request.RenderRequest;
 import de.tudarmstadt.ukp.inception.rendering.vmodel.serialization.VDocumentSerializerExtensionPoint;
 import de.tudarmstadt.ukp.inception.schema.api.AnnotationSchemaService;
 import de.tudarmstadt.ukp.inception.support.json.JSONUtil;
+import jakarta.persistence.NoResultException;
+import jakarta.servlet.ServletContext;
 
 /**
  * Differential INCEpTION Annotation Messaging (DIAM) protocol controller.
@@ -127,6 +126,7 @@ public class DiamWebsocketController
     private final UserDao userRepository;
     private final VDocumentSerializerExtensionPoint vDocumentSerializerExtensionPoint;
     private final UserPreferencesService userPreferencesService;
+    private final ConstraintsService constraintsService;
 
     private final LoadingCache<ViewportDefinition, ViewportState> activeViewports;
 
@@ -135,7 +135,8 @@ public class DiamWebsocketController
             RepositoryProperties aRepositoryProperties, AnnotationSchemaService aSchemaService,
             ProjectService aProjectService, UserDao aUserRepository,
             VDocumentSerializerExtensionPoint aVDocumentSerializerExtensionPoint,
-            UserPreferencesService aUserPreferencesService)
+            UserPreferencesService aUserPreferencesService, ServletContext aServletContext,
+            ConstraintsService aConstraintsService)
     {
         msgTemplate = aMsgTemplate;
         renderingPipeline = aRenderingPipeline;
@@ -146,9 +147,10 @@ public class DiamWebsocketController
         userRepository = aUserRepository;
         vDocumentSerializerExtensionPoint = aVDocumentSerializerExtensionPoint;
         userPreferencesService = aUserPreferencesService;
+        constraintsService = aConstraintsService;
 
         activeViewports = Caffeine.newBuilder() //
-                .expireAfterAccess(Duration.ofMinutes(30)) //
+                .expireAfterAccess(Duration.ofMinutes(aServletContext.getSessionTimeout())) //
                 .build(this::initState);
     }
 
@@ -168,10 +170,10 @@ public class DiamWebsocketController
     @EventListener
     public void onSessionUnsubscribe(SessionUnsubscribeEvent aEvent)
     {
-        SimpMessageHeaderAccessor headers = SimpMessageHeaderAccessor.wrap(aEvent.getMessage());
+        var headers = SimpMessageHeaderAccessor.wrap(aEvent.getMessage());
 
-        String sessionId = headers.getSessionId();
-        String subscriptionId = headers.getSubscriptionId();
+        var sessionId = headers.getSessionId();
+        var subscriptionId = headers.getSubscriptionId();
 
         log.trace("Unsubscribing {} from subscription {}", sessionId, subscriptionId);
 
@@ -207,29 +209,29 @@ public class DiamWebsocketController
             Principal aPrincipal, //
             @DestinationVariable(PARAM_PROJECT) long aProjectId,
             @DestinationVariable(PARAM_DOCUMENT) long aDocumentId,
-            @DestinationVariable(PARAM_USER) String aUser,
+            @DestinationVariable(PARAM_USER) String aDataOwner,
             @DestinationVariable(PARAM_FROM) int aViewportBegin,
             @DestinationVariable(PARAM_TO) int aViewportEnd,
             @DestinationVariable(PARAM_FORMAT) String aFormat)
         throws IOException
     {
-        Project project = getProject(aProjectId);
+        var project = getProject(aProjectId);
 
-        try (CasStorageSession session = CasStorageSession.open()) {
+        try (var session = CasStorageSession.open()) {
             MDC.put(KEY_REPOSITORY_PATH, repositoryProperties.getPath().toString());
             MDC.put(KEY_USERNAME, aPrincipal.getName());
 
-            ViewportDefinition vpd = new ViewportDefinition(aProjectId, aDocumentId, aUser,
-                    aViewportBegin, aViewportEnd, aFormat);
+            var vpd = new ViewportDefinition(aProjectId, aDocumentId, aDataOwner, aViewportBegin,
+                    aViewportEnd, aFormat);
 
             // Ensure that the viewport is registered
-            ViewportState vps = activeViewports.get(vpd);
+            var vps = activeViewports.get(vpd);
 
             log.trace("Subscribing {} to {}", aHeaderAccessor.getSessionId(), vpd.getTopic());
             vps.addSubscription(aHeaderAccessor.getSessionId(),
                     aHeaderAccessor.getSubscriptionId());
 
-            JsonNode json = render(project, aDocumentId, aUser, aViewportBegin, aViewportEnd,
+            var json = render(project, aDocumentId, aDataOwner, aViewportBegin, aViewportEnd,
                     aFormat);
             vps.setJson(json);
             return json;
@@ -271,29 +273,36 @@ public class DiamWebsocketController
     // }
     // }
 
-    private JsonNode render(Project aProject, long aDocumentId, String aUser, int aViewportBegin,
-            int aViewportEnd, String aFormat)
+    private JsonNode render(Project aProject, long aDocumentId, String aDataOwner,
+            int aViewportBegin, int aViewportEnd, String aFormat)
         throws IOException
     {
         var doc = documentService.getSourceDocument(aProject.getId(), aDocumentId);
-        var user = userRepository.getUserOrCurationUser(aUser);
+        var sessionOwner = userRepository.getCurrentUsername();
+        var dataOwner = userRepository.getUserOrCurationUser(aDataOwner);
 
-        var cas = documentService.readAnnotationCas(doc, aUser);
+        var constraints = constraintsService.getMergedConstraints(aProject);
 
-        var prefs = userPreferencesService.loadPreferences(doc.getProject(), user.getUsername(),
+        var cas = documentService.readAnnotationCas(doc, aDataOwner);
+
+        var prefs = userPreferencesService.loadPreferences(doc.getProject(), sessionOwner,
                 Mode.ANNOTATION);
 
         var layers = schemaService.listSupportedLayers(aProject).stream()
                 .filter(AnnotationLayer::isEnabled) //
-                .filter(l -> !prefs.getHiddenAnnotationLayerIds().contains(l.getId()))
-                .collect(toList());
+                .filter(l -> !prefs.getHiddenAnnotationLayerIds().contains(l.getId())) //
+                .toList();
+
+        var allLayers = schemaService.listAnnotationLayer(aProject);
 
         var request = RenderRequest.builder() //
                 .withSessionOwner(userRepository.getCurrentUser()) //
-                .withDocument(doc, user) //
+                .withDocument(doc, dataOwner) //
+                .withConstraints(constraints) //
                 .withWindow(aViewportBegin, aViewportEnd) //
                 .withCas(cas) //
                 .withVisibleLayers(layers) //
+                .withAllLayers(allLayers) //
                 .build();
 
         var vdoc = renderingPipeline.render(request);
@@ -339,12 +348,12 @@ public class DiamWebsocketController
     {
         // MDC.put(KEY_REPOSITORY_PATH, repositoryProperties.getPath().toString());
 
-        try (CasStorageSession session = CasStorageSession.openNested()) {
-            Project project = projectService.getProject(vpd.getProjectId());
-            JsonNode newJson = render(project, vpd.getDocumentId(), vpd.getUser(), vpd.getBegin(),
+        try (var session = CasStorageSession.openNested()) {
+            var project = projectService.getProject(vpd.getProjectId());
+            var newJson = render(project, vpd.getDocumentId(), vpd.getUser(), vpd.getBegin(),
                     vpd.getEnd(), vpd.getFormat());
 
-            JsonNode diff = JsonDiff.asJson(vps.getJson(), newJson);
+            var diff = JsonDiff.asJson(vps.getJson(), newJson);
 
             vps.setJson(newJson);
 
@@ -363,7 +372,7 @@ public class DiamWebsocketController
     private Project getProject(long aProjectId) throws AccessDeniedException
     {
         // Get current user - this will throw an exception if the current user does not exit
-        User user = userRepository.getCurrentUser();
+        var user = userRepository.getCurrentUser();
 
         // Get project
         Project project;
