@@ -18,9 +18,9 @@
 package de.tudarmstadt.ukp.inception.ui.core.docanno.layer;
 
 import static java.util.Arrays.asList;
-import static java.util.stream.Collectors.toList;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Supplier;
 
@@ -28,13 +28,16 @@ import org.apache.uima.cas.CAS;
 import org.apache.uima.resource.metadata.TypeSystemDescription;
 import org.apache.wicket.markup.html.panel.Panel;
 import org.apache.wicket.model.IModel;
+import org.apache.wicket.validation.ValidationError;
 import org.springframework.beans.factory.InitializingBean;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.ApplicationEventPublisher;
 
 import de.tudarmstadt.ukp.clarin.webanno.api.annotation.rendering.NopRenderer;
+import de.tudarmstadt.ukp.clarin.webanno.constraints.ConstraintsService;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationFeature;
 import de.tudarmstadt.ukp.clarin.webanno.model.AnnotationLayer;
+import de.tudarmstadt.ukp.inception.annotation.layer.behaviors.LayerBehaviorRegistry;
 import de.tudarmstadt.ukp.inception.rendering.Renderer;
 import de.tudarmstadt.ukp.inception.schema.api.feature.FeatureSupportRegistry;
 import de.tudarmstadt.ukp.inception.schema.api.layer.LayerSupport_ImplBase;
@@ -53,10 +56,14 @@ public class DocumentMetadataLayerSupport
     extends LayerSupport_ImplBase<DocumentMetadataLayerAdapter, DocumentMetadataLayerTraits>
     implements InitializingBean
 {
+    public static final String FEATURE_NAME_ORDER = "i7n_uiOrder";
+
     public static final String TYPE = "document-metadata";
 
     private final ApplicationEventPublisher eventPublisher;
     private final DocumentMetadataLayerSupportProperties properties;
+    private final ConstraintsService constraintsService;
+    private final LayerBehaviorRegistry layerBehaviorsRegistry;
 
     private String layerSupportId;
     private List<LayerType> types;
@@ -64,11 +71,14 @@ public class DocumentMetadataLayerSupport
     @Autowired
     public DocumentMetadataLayerSupport(FeatureSupportRegistry aFeatureSupportRegistry,
             ApplicationEventPublisher aEventPublisher,
-            DocumentMetadataLayerSupportProperties aProperties)
+            DocumentMetadataLayerSupportProperties aProperties,
+            LayerBehaviorRegistry aLayerBehaviorsRegistry, ConstraintsService aConstraintsService)
     {
         super(aFeatureSupportRegistry);
         eventPublisher = aEventPublisher;
         properties = aProperties;
+        layerBehaviorsRegistry = aLayerBehaviorsRegistry;
+        constraintsService = aConstraintsService;
     }
 
     @Override
@@ -107,7 +117,8 @@ public class DocumentMetadataLayerSupport
             Supplier<Collection<AnnotationFeature>> aFeatures)
     {
         return new DocumentMetadataLayerAdapter(getLayerSupportRegistry(), featureSupportRegistry,
-                eventPublisher, aLayer, aFeatures);
+                eventPublisher, aLayer, aFeatures, constraintsService, layerBehaviorsRegistry
+                        .getLayerBehaviors(this, DocumentMetadataLayerBehavior.class));
     }
 
     @Override
@@ -116,9 +127,13 @@ public class DocumentMetadataLayerSupport
     {
         var td = aTsd.addType(aLayer.getName(), "", CAS.TYPE_NAME_ANNOTATION_BASE);
 
-        var featureForLayer = aAllFeaturesInProject.stream()
-                .filter(feature -> aLayer.equals(feature.getLayer())).collect(toList());
-        generateFeatures(aTsd, td, featureForLayer);
+        td.addFeature(FEATURE_NAME_ORDER, "", CAS.TYPE_NAME_INTEGER);
+
+        var featuresForLayer = aAllFeaturesInProject.stream() //
+                .filter(feature -> aLayer.equals(feature.getLayer())) //
+                .toList();
+
+        generateFeatures(aTsd, td, featuresForLayer);
     }
 
     @Override
@@ -145,5 +160,17 @@ public class DocumentMetadataLayerSupport
     public DocumentMetadataLayerTraits createTraits()
     {
         return new DocumentMetadataLayerTraits();
+    }
+
+    @Override
+    public List<ValidationError> validateFeatureName(AnnotationFeature aFeature)
+    {
+        var name = aFeature.getName();
+        if (name.equals(FEATURE_NAME_ORDER)) {
+            return asList(new ValidationError("[" + name + "] is a reserved feature name on "
+                    + "document metadata layers. Please use a different name for the feature."));
+        }
+
+        return Collections.emptyList();
     }
 }
